--- a/genomics/latex_glossary.tex
+++ b/genomics/latex_glossary.tex
@@ -4,7 +4,7 @@
 \begin{document}
 
 
-\setlength{\columnsep}{3cm}
+\setlength{\columnsep}{1.5cm}
 \begin{multicols}{3}
 \noindent
 ---{\bf A}---\newline
@@ -15,11 +15,14 @@
 \href{https://en.wikipedia.org/wiki/Autosome}{Autosome}\newline
 ---{\bf B}---\newline
 \href{https://en.wikipedia.org/wiki/Base_pair}{Base\_pair}\newline
+\href{https://en.wikipedia.org/wiki/Bioinformatics}{Bioinformatics}\newline
 ---{\bf C}---\newline
 \href{https://en.wikipedia.org/wiki/Centromere}{Centromere}\newline
 \href{https://en.wikipedia.org/wiki/ChIP_sequencing}{ChIP\_sequencing}\newline
 \href{https://en.wikipedia.org/wiki/Chromatid}{Chromatid}\newline
+\href{https://en.wikipedia.org/wiki/Chromatin}{Chromatin}\newline
 \href{https://en.wikipedia.org/wiki/Chromosome}{Chromosome}\newline
+\href{https://en.wikipedia.org/wiki/Cis-regulatory_element}{Cis-regulatory\_element}\newline
 \href{https://en.wikipedia.org/wiki/Genetic_code#Codons}{Codons}\newline
 \href{https://en.wikipedia.org/wiki/Cytosine}{Cytosine}\newline
 ---{\bf D}---\newline
@@ -29,6 +32,7 @@
 \href{https://en.wikipedia.org/wiki/Ploidy#Diploid}{Diploid}\newline
 \href{https://en.wikipedia.org/wiki/Directionality_(molecular_biology)}{Directionality}\newline
 ---{\bf E}---\newline
+\href{https://en.wikipedia.org/wiki/Epigenetics}{Epigenetics}\newline
 \href{https://en.wikipedia.org/wiki/Eukaryote}{Eukaryote}\newline
 \href{https://en.wikipedia.org/wiki/Exon}{Exon}\newline
 ---{\bf F}---\newline
@@ -37,18 +41,22 @@
 \href{https://en.wikipedia.org/wiki/Gene}{Gene}\newline
 \href{https://en.wikipedia.org/wiki/Gene_expression}{Gene\_expression}\newline
 \href{https://en.wikipedia.org/wiki/Gene_regulatory_network}{Gene\_regulatory\_network}\newline
+\href{https://en.wikipedia.org/wiki/Genomics}{Genomics}\newline
 \href{https://en.wikipedia.org/wiki/Genotype}{Genotype}\newline
+\href{https://en.wikipedia.org/wiki/Germline}{Germline}\newline
 \href{https://en.wikipedia.org/wiki/Guanine}{Guanine}\newline
 ---{\bf H}---\newline
 \href{https://en.wikipedia.org/wiki/Ploidy#Haploid_and_monoploid}{Haploid\_and\_monoploid}\newline
 \href{https://en.wikipedia.org/wiki/Zygosity#Hemizygous}{Hemizygous}\newline
 \href{https://en.wikipedia.org/wiki/Zygosity#Heterozygous}{Heterozygous}\newline
 \href{https://en.wikipedia.org/wiki/Histone}{Histone}\newline
+\href{https://en.wikipedia.org/wiki/Homologous_chromosome}{Homologous\_chromosome}\newline
 \href{https://en.wikipedia.org/wiki/Zygosity#Homozygous}{Homozygous}\newline
 ---{\bf I}---\newline
 \href{https://en.wikipedia.org/wiki/Intron}{Intron}\newline
 ---{\bf J}---\newline
 ---{\bf K}---\newline
+\href{https://en.wikipedia.org/wiki/Karyotype}{Karyotype}\newline
 ---{\bf L}---\newline
 \href{https://en.wikipedia.org/wiki/Locus_(genetics)}{Locus}\newline
 ---{\bf M}---\newline
@@ -59,9 +67,12 @@
 ---{\bf N}---\newline
 \href{https://en.wikipedia.org/wiki/Nucleotide}{Nucleotide}\newline
 ---{\bf O}---\newline
+\href{https://en.wikipedia.org/wiki/Operon}{Operon}\newline
 ---{\bf P}---\newline
 \href{https://en.wikipedia.org/wiki/Phenotype}{Phenotype}\newline
+\href{https://en.wikipedia.org/wiki/Pleiotropy}{Pleiotropy}\newline
 \href{https://en.wikipedia.org/wiki/Ploidy}{Ploidy}\newline
+\href{https://en.wikipedia.org/wiki/Polymerase_chain_reaction}{Polymerase\_chain\_reaction}\newline
 \href{https://en.wikipedia.org/wiki/Primary_transcript}{Primary\_transcript}\newline
 \href{https://en.wikipedia.org/wiki/Prokaryote}{Prokaryote}\newline
 \href{https://en.wikipedia.org/wiki/Promoter_(genetics)}{Promoter}\newline
@@ -74,8 +85,10 @@
 \href{https://en.wikipedia.org/wiki/Ribosome}{Ribosome}\newline
 ---{\bf S}---\newline
 \href{https://en.wikipedia.org/wiki/Sanger_sequencing}{Sanger\_sequencing}\newline
+\href{https://en.wikipedia.org/wiki/Sequence_motif}{Sequence\_motif}\newline
 \href{https://en.wikipedia.org/wiki/Sex_chromosome}{Sex\_chromosome}\newline
 \href{https://en.wikipedia.org/wiki/Sigma_factor}{Sigma\_factor}\newline
+\href{https://en.wikipedia.org/wiki/Somatic_(biology)}{Somatic}\newline
 ---{\bf T}---\newline
 \href{https://en.wikipedia.org/wiki/Thymine}{Thymine}\newline
 \href{https://en.wikipedia.org/wiki/Transcription_(biology)}{Transcription}\newline
