--- a/genomics/latex_glossary.tex
+++ b/genomics/latex_glossary.tex
@@ -35,6 +35,7 @@
 \href{https://en.wikipedia.org/wiki/Directionality_(molecular_biology)}{Directionality}\newline
 ---{\bf E}---\newline
 \href{https://en.wikipedia.org/wiki/Enhancer_(genetics)}{Enhancer}\newline
+\href{https://en.wikipedia.org/wiki/Enhancer_(genetics)}{Enhancer}\newline
 \href{https://en.wikipedia.org/wiki/Epigenetics}{Epigenetics}\newline
 \href{https://en.wikipedia.org/wiki/Eukaryote}{Eukaryote}\newline
 \href{https://en.wikipedia.org/wiki/Exon}{Exon}\newline
@@ -69,6 +70,7 @@
 \href{https://en.wikipedia.org/wiki/Messenger_RNA}{Messenger\_RNA}\newline
 \href{https://en.wikipedia.org/wiki/Mitosis}{Mitosis}\newline
 ---{\bf N}---\newline
+\href{https://en.wikipedia.org/wiki/Nucleosome}{Nucleosome}\newline
 \href{https://en.wikipedia.org/wiki/Nucleotide}{Nucleotide}\newline
 ---{\bf O}---\newline
 \href{https://en.wikipedia.org/wiki/Operon}{Operon}\newline
@@ -92,6 +94,7 @@
 \href{https://en.wikipedia.org/wiki/Sequence_motif}{Sequence\_motif}\newline
 \href{https://en.wikipedia.org/wiki/Sex_chromosome}{Sex\_chromosome}\newline
 \href{https://en.wikipedia.org/wiki/Sigma_factor}{Sigma\_factor}\newline
+\href{https://en.wikipedia.org/wiki/Silencer_(genetics)}{Silencer}\newline
 \href{https://en.wikipedia.org/wiki/Somatic_(biology)}{Somatic}\newline
 ---{\bf T}---\newline
 \href{https://en.wikipedia.org/wiki/Thymine}{Thymine}\newline
